--- a/LinioChallenge/LinioChallenge/package.json
+++ b/LinioChallenge/LinioChallenge/package.json
@@ -8,10 +8,16 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "test": "mocha"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.9",
+    "@types/mocha": "^7.0.1",
     "@types/node": "^8.0.14",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.2.2"
   }
 }
